# example-cmake-cshape-managed-dll-for-unity

./: .gitignore  CMakeLists.txt  README.md
UnityDebugProj/Assets/Scenes/: SampleScene.unity
UnityDebugProj/ProjectSettings/: ProjectSettings.asset
src/: CMakeLists.txt  VSTest1.cs
